fine strutturazione header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,30 @@
 <body>
     <!-- HEADER -->
     <header>
-        <section class="up-header"></section>
-        <section class="bottom-header"></section>
+        <section class="up-header">
+            <section class="left-header">
+                <div class="logo"></div>
+                <div class="caselle-left-header"></div>
+                <div class="caselle-left-header"></div>
+                <div class="caselle-left-header"></div>
+            </section>
+            
+            <section class="right-header">
+                <div class="caselle-right-header"></div>
+                <div class="caselle-right-header"></div>
+                <div class="caselle-right-header"></div>
+                <div class="button-header"></div>
+            </section>
+        </section>
+
+        <section class="bottom-header">
+            <section class="vw-60">
+                <div class="intestazione-header"></div>
+                <div class="paragrafo-header"></div>
+                <div class="imagine-header"></div>
+            </section>
+
+        </section>
     </header>
     <!-- FINE HEADER  -->
 
