--- a/index.html
+++ b/index.html
@@ -66,12 +66,58 @@
         </section>
 
         <section class="vw-60 dropbox-business">
-            
+            <div>
+                <h2>
+                Esegui più operazioni con dropbox business
+                </h2>
+            </div>
+            <div class="riga-uno-dropbox-business">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <section class="riga-due-dropbox-business">
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
         </section>
-        <section class="vw-60 500.000"></section>
-        <section class="quadrati-colorati"></section>
-        <section class="vw-60 prova-gratuita"></section>
-        <section class="vw-60 faq"></section>
+
+        <section class="vw-60 scopri-di-più">
+            <div>
+
+            </div>
+        </section>
+
+        <section class="quadrati-colorati">
+            <div class="quadrato-grande-sx">
+                <div class="quadrato-piccolo-verde"></div>
+                <div class="quadrato-piccolo-bordeau"></div>
+                <div class="quadrato-piccolo-blu"></div>
+                <div class="quadrato-piccolo-rosso"></div>
+            </div>
+
+            <div class="quadrato-grande-centro">
+
+            </div>
+
+            <div class="quadrato-grande-dx">
+                <div class="quadrato-piccolo-rosso-scuro"></div>
+                <div class="quadrato-piccolo-celeste"></div>
+                <div class="quadrato-piccolo-blu-scuro"></div>
+                <div class="quadrato-piccolo-giallo"></div>
+            </div>
+
+        </section>
+
+        <section class="prova-gratuita">
+                <div>
+                </div>
+        </section>
+
+        <section class="vw-60 faq">
+                
+        </section>
     </MAIN>
     <!-- FINE MAIN-->
 
