--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <section class="bottom-header">
-            <section class="vw-60">
+            <section class="vw-80">
                 <div class="intestazione-header"></div>
                 <div class="paragrafo-header"></div>
                 <div class="imagine-header"></div>
@@ -40,7 +40,7 @@
     <!-- FINE HEADER  -->
 
     <!-- MAIN -->
-    <MAIN>
+    <main>
         <section class="vw-60 piano-business">
             <h1>Trova il piano business che fa per te</h1>
             <input type="checkbox" name="" id="">hhhhhhhhhhhhhh
@@ -118,12 +118,12 @@
         <section class="vw-60 faq">
                 
         </section>
-    </MAIN>
+    </main>
     <!-- FINE MAIN-->
 
     <!-- FOOTER -->
     <footer>
-        <section class="vw-60">
+        <section class="vw-80">
             <section class="up-footer">
                 <div class="dropbox"></div>
                 <div class="prodotti"></div>
