Inserimento contenuti Header

--- a/index.html
+++ b/index.html
@@ -8,31 +8,67 @@
 
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
 </head>
 <body>
     <!-- HEADER -->
     <header>
         <section class="up-header">
             <section class="left-header">
-                <div class="logo"></div>
-                <div class="caselle-left-header"></div>
-                <div class="caselle-left-header"></div>
-                <div class="caselle-left-header"></div>
+                <div class="logo"> 
+                    <img src="img/logo-small.png" alt="Logo">
+                </div>
+                <div class="caselle-left-header">
+                    Perché Dropbox
+                </div>
+                <div class="caselle-left-header">
+                    Funzioni
+                </div>
+                <div class="caselle-left-header">
+                    Piani e Prezzi
+                </div>
             </section>
             
             <section class="right-header">
-                <div class="caselle-right-header"></div>
-                <div class="caselle-right-header"></div>
-                <div class="caselle-right-header"></div>
-                <div class="button-header"></div>
+                <div class="caselle-right-header">
+                    Supporto
+                </div>
+                <div class="caselle-right-header">
+                    Contatta l'ufficio vendite
+                </div>
+                <div class="hicaselle-right-header">
+                    Accedi
+                </div>
+                <div class="button-header">
+                    <button>
+                        Inizia
+                    </button>
+                </div>
             </section>
         </section>
 
         <section class="bottom-header">
             <section class="vw-80">
-                <div class="intestazione-header"></div>
-                <div class="paragrafo-header"></div>
-                <div class="imagine-header"></div>
+                <div class="intestazione-header">
+                    <h1>
+                        Tutto ciò che ti serve per il tuo  lavoro, in un unico posto
+                    </h1>
+                </div>
+                <div class="paragrafo-header">
+                    <p>
+                        Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                    </p>
+                    <button>
+                        inizia la tua prova gratuita
+                    </button>
+                    <p>
+                        annulla in qualsiasi momento
+                    </p>
+                    <i class="fa-solid fa-arrow-down"></i>
+                </div>
+                <div class="imagine-header">
+                </div>
             </section>
 
         </section>
@@ -43,12 +79,18 @@
     <main>
         <section class="vw-60 piano-business">
             <h1>Trova il piano business che fa per te</h1>
-            <input type="checkbox" name="" id="">hhhhhhhhhhhhhh
-            <input type="checkbox" name="" id="">ggggggggggggg
+            <input type="checkbox" name="" id="">Fatturazione mensile
+            <input type="checkbox" name="" id="">Fatturazione annuale
             <div class="colonne-main">
-                <div class="professional"></div>
-                <div class="advanced"></div>
-                <div class="enterprise"></div>
+                <div class="professional">
+                    Singolo
+                </div>
+                <div class="advanced">
+                    Team
+                </div>
+                <div class="enterprise">
+                    Azienda
+                </div>
             </div>
         </section>
 
