casella entra in contatto

--- a/index.html
+++ b/index.html
@@ -180,16 +180,42 @@
             </div>
         </section>
 
+        <!-- CASELLA SOTTO 3 COLONNE -->
         <section class="vw-60 enterprise">
-            
+            <div class="intestazione-casella-enterprise">
+                <i class="fa-solid fa-building"></i>Team
+            </div>
+            <div class="contenuto-casella-enterprise">
+                <div class="prima-riga-contenuto-casella-enterprise">
+                    <div class="left-casella-enterprise">
+                        <h3>
+                            Enterprise
+                        </h3>    
+                    </div>
+                    <div class="right-casella-enterprise">
+                        <button>
+                            Contatta l'ufficio vendite
+                        </button>
+                    </div>
+                </div>
+                <h4>
+                    Contatta l'ufficio vendite per i prezzi
+                </h4>
+                <p>
+                    Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                </p>
+            </div>
         </section>
+
+        <!-- ENTRA IN CONTATTO -->
 
         <section class="vw-60 entra-in-contatto">
             <section class="left-entra-in-contatto">
-
             </section>
             <section class="right-entra-in-contatto">
-
+                <h2>Entra in contatto con un partner Dropbox</h2>
+                <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                <button class="white-button">Trova un partner</button>
             </section>
         </section>
 
