inizio quadrati colorati

--- a/index.html
+++ b/index.html
@@ -330,23 +330,26 @@
                     </div>
 
                 </div>
-            </div>
-
-
-
-
             </section>
         </section>
 
+        <!-- SCOPRI DI PIU' -->
         <section class="vw-60 scopri-di-più">
-            <div>
-
-            </div>
+            <h1>
+                Più di 500.00 team utilizzano <br> Dropbox Business
+            </h1>
+            <a href="">Scopri di più sui nostri clienti</a>
         </section>
+
+
+
+        <!-- QUADRATI COLORATI -->
 
         <section class="quadrati-colorati">
             <div class="quadrato-grande-sx">
-                <div class="quadrato-piccolo-verde"></div>
+                <div class="quadrato-piccolo-verde">
+                    <img src="img/designit.svg" alt="">
+                </div>
                 <div class="quadrato-piccolo-bordeau"></div>
                 <div class="quadrato-piccolo-blu"></div>
                 <div class="quadrato-piccolo-rosso"></div>
@@ -357,7 +360,9 @@
             </div>
 
             <div class="quadrato-grande-dx">
-                <div class="quadrato-piccolo-rosso-scuro"></div>
+                <div class="quadrato-piccolo-rosso-scuro">
+
+                </div>
                 <div class="quadrato-piccolo-celeste"></div>
                 <div class="quadrato-piccolo-blu-scuro"></div>
                 <div class="quadrato-piccolo-giallo"></div>
