fine inserimento contenuti main

--- a/index.html
+++ b/index.html
@@ -348,35 +348,85 @@
         <section class="quadrati-colorati">
             <div class="quadrato-grande-sx">
                 <div class="quadrato-piccolo-verde">
-                    <img src="img/designit.svg" alt="">
+                    <img class="loghi-quadrati-colorati" src="img/designit.svg" alt="">
                 </div>
-                <div class="quadrato-piccolo-bordeau"></div>
-                <div class="quadrato-piccolo-blu"></div>
-                <div class="quadrato-piccolo-rosso"></div>
+                <div class="quadrato-piccolo-bordeau">
+                    <img  class="loghi-quadrati-colorati" src="img/arizona_state_university.svg" alt="">
+                </div>
+                <div class="quadrato-piccolo-blu">
+                    <img class="loghi-quadrati-colorati" src="img/university_of_florida.svg" alt="">
+                </div>
+                <div class="quadrato-piccolo-rosso">
+                    <img class="loghi-quadrati-colorati" src="img/topps.svg" alt="">
+                </div>
             </div>
 
             <div class="quadrato-grande-centro">
-
+                <div class="immagine-quadrato-grande-centro">
+                    <img src="img/designit.svg" alt="">
+                </div>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A eligendi rerum expedita, veniam porro laborum quasi cupiditate quibusdam doloremque in praesentium laboriosam aperiam repudiandae tempora molestiae omnis ratione similique voluptates! Omnis totam, dolor nesciunt dicta voluptates laudantium possimus repellat, veniam rem</p>
+                <p>Lorem ipsum dolor sit amet.</p>
             </div>
+            
 
             <div class="quadrato-grande-dx">
                 <div class="quadrato-piccolo-rosso-scuro">
-
+                    <img class="loghi-quadrati-colorati" src="img/world_bicycle_relief.svg" alt="">
                 </div>
-                <div class="quadrato-piccolo-celeste"></div>
-                <div class="quadrato-piccolo-blu-scuro"></div>
-                <div class="quadrato-piccolo-giallo"></div>
+                <div class="quadrato-piccolo-celeste">
+                    <img class="loghi-quadrati-colorati" src="img/hearst_corp.svg" alt="">
+                </div>
+                <div class="quadrato-piccolo-blu-scuro">
+                    <img class="loghi-quadrati-colorati" src="img/lonely_planet.svg" alt="">
+                </div>
+                <div class="quadrato-piccolo-giallo">
+                    <img class="loghi-quadrati-colorati" src="img/clear_channel.svg" alt="">
+                </div>
             </div>
 
         </section>
 
         <section class="prova-gratuita">
-                <div>
+                <div class="left-prova-gratuita">
+                    <h2>
+                        Porta Dropbox Business <br> nella tua azienda.
+                    </h2>
+                </div>
+
+                <div class="right-prova-gratuita">
+                    <button class="white-button">
+                        Inizia la tua prova gratuita
+                    </button>
                 </div>
         </section>
 
+        <!-- FAQ -->
         <section class="vw-60 faq">
-                
+            <div class="intestazione-faq">
+                <h2>Domande Frequenti</h2>
+            </div>
+
+            <hr>
+            <div class="righe">
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nulla fuga cumque.</li>
+                <li><i class="fa-solid fa-chevron-down"></i></li>
+            </div>
+
+            <hr>
+            <div class="righe">
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nulla fuga cumque.</li>
+                <li><i class="fa-solid fa-chevron-down"></i></li>
+            </div>
+
+            <hr>
+            <div class="righe">
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi nulla fuga cumque.</li>
+                <li><i class="fa-solid fa-chevron-down"></i></li>
+            </div>
+            <hr>
+            </div>
+
         </section>
     </main>
     <!-- FINE MAIN-->
