--- a/index.html
+++ b/index.html
@@ -435,15 +435,79 @@
     <footer>
         <section class="vw-80">
             <section class="up-footer">
-                <div class="dropbox"></div>
-                <div class="prodotti"></div>
-                <div class="azienda"></div>
-                <div class="supporto"></div>
-                <div class="comunity"></div>
+                <div class="dropbox">
+                    <h3>
+                        Dropbox
+                    </h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+
+                <div class="prodotti">
+                    <h3>
+                        Prodotti
+                    </h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+
+                <div class="azienda">
+                    <h3>
+                        Azienda
+                    </h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="supporto">
+                    <h3>
+                        Supporto
+                    </h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+
+                <div class="comunity">
+                    <h3>
+                        Comunity
+                    </h3>
+                    <ul>
+                        <li>Applicazione desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
             </section>
+
+            <hr class="hr">
     
             <section class="bottom-footer">
-                <div class="lingua"></div>
+                <div class="lingua">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    Italiano
+                    <i class="fa-solid fa-caret-up"></i>
+                </div>
             </section>
 
         </section>
