--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
 <body>
     <!-- HEADER -->
