centratura up-header

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
                     <img src="img/logo-small.png" alt="Logo">
                 </div>
                 <div class="caselle-left-header">
-                    Perché Dropbox
+                    <p>Perché Dropbox</p> 
                 </div>
                 <div class="caselle-left-header">
-                    Funzioni
+                    <p>Funzioni</p> 
                 </div>
                 <div class="caselle-left-header">
-                    Piani e Prezzi
+                    <p>Piani e Prezzi</p> 
                 </div>
             </section>
             
             <section class="right-header">
                 <div class="caselle-right-header">
-                    Supporto
+                    <p>Supporto</p> 
                 </div>
                 <div class="caselle-right-header">
-                    Contatta l'ufficio vendite
+                    <p>Contatta l'ufficio vendite</p> 
                 </div>
                 <div class="hicaselle-right-header">
-                    Accedi
+                    <p>Accedi</p> 
                 </div>
                 <div class="button-header">
                     <button>
