--- a/index.html
+++ b/index.html
@@ -51,25 +51,32 @@
 
         <section class="bottom-header">
             <section class="vw-80">
-                <div class="intestazione-header">
-                    <h1>
-                        Tutto ciò che ti serve per il tuo  lavoro, in un unico posto
-                    </h1>
+                <div class="container-large-bottom-header">
+                    <div class="intestazione-header">
+                        <h1>
+                            Tutto ciò che ti serve per il tuo  lavoro, in un unico posto
+                        </h1>
+                    </div>
+                    <div class="container-small-bottom-header">
+
+                        <div class="paragrafo-header">
+                            <p>
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                            </p>
+                            <button>
+                                inizia la tua prova gratuita
+                            </button>
+                            <p>
+                                annulla in qualsiasi momento
+                            </p>
+                            <i class="fa-solid fa-arrow-down fa-3x"></i>
+                        </div>
+                        
+                        <div class="imagine-header">
+                        </div>
+                    </div>
                 </div>
-                <div class="paragrafo-header">
-                    <p>
-                        Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
-                    </p>
-                    <button>
-                        inizia la tua prova gratuita
-                    </button>
-                    <p>
-                        annulla in qualsiasi momento
-                    </p>
-                    <i class="fa-solid fa-arrow-down"></i>
-                </div>
-                <div class="imagine-header">
-                </div>
+
             </section>
 
         </section>
